🏷️ Rename website from PropVista to 10*10 across all templates

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Our Realtors | PropVista{% endblock %}
+{% block title %}Our Realtors | 10*10{% endblock %}
 {% block content %}
 <div class="page-header">
     <div class="container">
