--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Dashboard | PropVista{% endblock %}
+{% block title %}Dashboard | 10*10{% endblock %}
 {% block content %}
 <div class="page-header">
     <div class="container">
