--- a/templates/listings.html
+++ b/templates/listings.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Listings | PropVista{% endblock %}
+{% block title %}Listings | 10*10{% endblock %}
 {% block content %}
 <div class="page-header">
     <div class="container">
