--- a/templates/post_listing.html
+++ b/templates/post_listing.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Post Your Property | PropVista{% endblock %}
+{% block title %}Post Your Property | 10*10{% endblock %}
 {% block content %}
 <div class="page-header">
     <div class="container text-center">
