--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Register | PropVista{% endblock %}
+{% block title %}Register | 10*10{% endblock %}
 {% block content %}
 <div class="container py-5" style="min-height:80vh">
     <div class="row justify-content-center">
