--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Search Properties | PropVista{% endblock %}
+{% block title %}Search Properties | 10*10{% endblock %}
 {% block content %}
 <div class="page-header">
   <div class="container">
