--- a/templates/listing.html
+++ b/templates/listing.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ listing.title }} | PropVista{% endblock %}
+{% block title %}{{ listing.title }} | 10*10{% endblock %}
 {% block content %}
 <div class="page-header">
     <div class="container">
